--- a/_posts/2019-01-02-332-luozhenyu.md
+++ b/_posts/2019-01-02-332-luozhenyu.md
@@ -136,7 +136,8 @@ tags: [管理]
 
 
 # 第二部分：小趋势
-1
+
+## 1
 
 今晚的跨年演讲，我们只关注个人的行动策略，关注大环境里小个体的命运。就像诗人说的：“今夜我不关心人类，我只关心你。”
 
@@ -146,10 +147,9 @@ tags: [管理]
 
 感谢2018年，让我们有机会反思。我们还能抓住某个大趋势、随大流、凑热闹，然后鲤鱼跳龙门、一劳永逸吗？我们还可以拿着一张通用的入场券，叩开某一个大门，然后从此躺着分享里面的红利吗？2018年我们知道，那个时代再也不在了。
 
-整整100天前，我们发布了今年跨年演讲的主题：小趋势。对小趋势最简单的理解就是不能随大流。请大家看看这三个字——“小趋势”。我判断，这个词会成为2019年的流行词。因为一张通票吃遍天的潮流结束了，我们必须学会用新的方法，找到小趋势。
+整整100天前，我们发布了今年跨年演讲的主题：小趋势。对小趋势最简单的理解就是不能随大流。请大家看看这三个字——“小趋势”。我判断，这个词会成为2019年的流行词。*因为一张通票吃遍天的潮流结束了，我们必须学会用新的方法，找到小趋势。*
 
-
-2
+## 2
 
 什么是小趋势呢？
 
@@ -173,19 +173,18 @@ tags: [管理]
 
 我们再来回顾一下这个逻辑，你会发现推动变化的是来自隔壁的力量：
 
-    餐饮公司能上市，是因为可以通过开分店、做外卖迅速扩大规模，增强盈利能力；
-
-    为啥能扩大规模呢？因为资本愿意加入这局游戏了；
-
-    那为什么资本突然间愿意上牌桌了呢？因为餐饮业现在账目清楚、摆脱现金交易了；
-
-    那为什么账目能清楚了呢？因为移动支付。 
++ 餐饮公司能上市，是因为可以通过开分店、做外卖迅速扩大规模，增强盈利能力；
++ 为啥能扩大规模呢？因为资本愿意加入这局游戏了；
++ 那为什么资本突然间愿意上牌桌了呢？因为餐饮业现在账目清楚、摆脱现金交易了；
++ 那为什么账目能清楚了呢？因为移动支付。 
 
 这是一个链条，你要是想往前捯，依然可以问：为什么移动支付会爆发呢？因为4G网络普及了。好了，不能再往前捯了，再捯脑子就乱了。
 
-从后往前看一切顺理成章，但是如果回到这些事情发生的现场，我们真的能预测接下来会发生什么事么？那些会导致变化的力量，往往都是来自其他领域，来自那些我们平时观测不到的因素。它们才会对我们这个领域，产生意料之外的影响。
+从后往前看一切顺理成章，但是如果回到这些事情发生的现场，我们真的能预测接下来会发生什么事么？*那些会导致变化的力量，往往都是来自其他领域，来自那些我们平时观测不到的因素。*它们才会对我们这个领域，产生意料之外的影响。
 
 假如我是一个餐馆老板，我们穿越回2013年底。确实，我听说国家发4G牌照了，我最多能想象到，手机看视频更方便了，我怎么能想到这玩意通过移动支付、通过大数据，对我这个行业产生了那么大的影响呢？
+
+![](/uploads/2019/01/02-03.jpg)
 
 你还别觉得这是因为我智力低，现在一道智力测试题就摆在我们每个人面前。4G时代快要过去了，现在5G要来了。所有人都知道，这将会引发一系列大变化。请你预测一下，这对你所在的行业，会产生怎样的影响？
 
@@ -193,22 +192,21 @@ tags: [管理]
 
 过去是大河模型，世界大势浩浩汤汤，顺之者昌逆之者亡。我们判断的方向对，搭上的船对，顺流而下就行。 
 
-而现在，我们可能有必要把世界理解成一组多米诺骨牌，它摆成什么样不知道。但是只要有一个小小的颤动，哪怕是一只路过的蚂蚁碰倒了一张牌，一个极小的趋势，那么抖动了一下，就推动了一个大一点的趋势，接着又会推动一个更大的趋势，经过一连串的连锁反应，等推到我们面前的时候，已经面目全非，而且还变成了个庞然大物。每一张牌倒下的时候，我们都很难预测，它会推倒什么？放大什么？又会消灭什么？最终的景象又是什么？
+*而现在，我们可能有必要把世界理解成一组多米诺骨牌，它摆成什么样不知道。*但是只要有一个小小的颤动，哪怕是一只路过的蚂蚁碰倒了一张牌，一个极小的趋势，那么抖动了一下，就推动了一个大一点的趋势，接着又会推动一个更大的趋势，经过一连串的连锁反应，等推到我们面前的时候，已经面目全非，而且还变成了个庞然大物。每一张牌倒下的时候，我们都很难预测，它会推倒什么？放大什么？又会消灭什么？最终的景象又是什么？
 
 好了，我们终于明白小趋势这个难缠的妖精是啥了。
 
-第一，它小，所以很难察觉。第二，它不发生在我熟悉的领域里，它是通过一系列的连锁反应才滚动到我面前。
+*第一，它小，所以很难察觉。第二，它不发生在我熟悉的领域里，它是通过一系列的连锁反应才滚动到我面前。*
 
 所以，你说我们怎么预测它？
 
-
-3
+## 3
 
 这不是今天才发生的事，这个世界一直都这样，你很难预测小趋势。我举一个很不起眼的例子。
 
 跨年演讲的总撰稿李翔，他自称是个“猫奴”。这就是他们家的猫——可乐和雪碧。
 
-他告诉了我一件很有意思的事：《商业周刊》曾经把猫砂评选为世界上最重要的发明之一。奇怪，不就是个猫砂嘛。猫砂是干嘛的？就是垫在猫的便盆里的那层砂。猫拉了臭臭之后扒拉两下，猫砂能够迅速吸水，然后结团，很容易被清理走。就这么个东西，它怎么就能被称为最重要的发明之一？
+他告诉了我一件很有意思的事：*《商业周刊》曾经把猫砂评选为世界上最重要的发明之一。*奇怪，不就是个猫砂嘛。猫砂是干嘛的？就是垫在猫的便盆里的那层砂。猫拉了臭臭之后扒拉两下，猫砂能够迅速吸水，然后结团，很容易被清理走。就这么个东西，它怎么就能被称为最重要的发明之一？
 
 我们来看，这个奇妙的多米诺骨牌被推动的过程。 
 
@@ -230,10 +228,11 @@ tags: [管理]
 
 现在，我们就知道什么是“小趋势”了。它不是大趋势的小时候，它本身也未必能长成一个大趋势，它的威力是能启动连锁反应。
 
-所以，现在我们可以给小趋势下一个相对准确的定义了。小趋势是啥？小趋势是影响趋势的趋势，带来改变的改变。
+所以，现在我们可以给小趋势下一个相对准确的定义了。*小趋势是啥？小趋势是影响趋势的趋势，带来改变的改变。*
 
+![](/uploads/2019/01/02-04.jpg)
 
-4
+## 4
 
 小趋势这么玄，我们可咋办？小趋势这么容易错过，我这一错过是不是就成千古恨了呢？是啊，有人就是这么吓唬我们的。
 
@@ -259,7 +258,7 @@ tags: [管理]
 
 但是我们能玩的是什么呢？还记得我们的主题吗？小趋势。还记得刚才我说的这句话吗？小趋势是影响趋势的趋势，带来改变的改变。
 
-如果你觉得，现在这局游戏不是你的游戏，没关系，别打盹，因为这局游戏是那些大佬的游戏，有可能产生的那个连锁反应会滚到你面前，改变你的游戏。上一个窗口虽然关闭了，没准属于你的窗口，正在打开。
+如果你觉得，现在这局游戏不是你的游戏，没关系，别打盹，*因为这局游戏是那些大佬的游戏，有可能产生的那个连锁反应会滚到你面前，改变你的游戏。*上一个窗口虽然关闭了，没准属于你的窗口，正在打开。
 
 我要向你介绍一个朋友，前夜市烧烤摊摊主汪国玉。他开了一家餐厅叫南城香，专门卖夜市烧烤的。2014年南城香就是一家普普通通的餐饮企业，只有几家店而已。2015年美团崛起的时候，外卖大战开打，汪国玉可没觉得这个游戏跟自己没关系。他之前为外卖做的产品、配送、运营上的所有准备，都派上了用场。我直接告诉你结果吧。因为外卖这个趋势汪国玉把握住了，到今年，汪国玉的南城香每天光外卖就有2.5万单，一年的流水近6个亿。 
 
@@ -269,32 +268,25 @@ tags: [管理]
 
 在小趋势的逻辑里，我有一个坏消息和一个好消息要告诉你。
 
-坏消息是，每一趟班车停靠的时间都很短，而且看起来都像末班车。好消息是，真的没有末班车，车是一会儿一趟，越来越密。
+*坏消息是，每一趟班车停靠的时间都很短，而且看起来都像末班车。好消息是，真的没有末班车，车是一会儿一趟，越来越密。*
 
 都说干事得趁早。假设你想在网上卖东西，如果你回到2012年，你是个悲观主义者，你就会觉得没机会了。因为电商这件事在2012年以前就已经爆发了，那你看到已经有人成了，是不是就应该不干了？
 
 你在2012年之前，没成为一个淘品牌，是不是就错过了？没有啊，
 
-    这一年的9月，微信公众号上线了，微信电商的春天就来了。
-
-    这波又没赶上。没事啊，2013年，淘宝开始扶持网红电商了呀。
-
-    这波您还没赶上。2014年，O2O开始了。
-
-    你还没赶上。2015年，社交电商开始了。
-
-    你仍然没有赶上。2016年，拼团开始了。
-
-    你还是没有赶上。2017年，直播电商开始了。
-
-    到了2018年您还没醒，我只能说有人已经醒了，这位快手散打哥，通过短视频一天带货1.6亿。
++ 这一年的9月，微信公众号上线了，微信电商的春天就来了。
++ 这波又没赶上。没事啊，2013年，淘宝开始扶持网红电商了呀。
++ 这波您还没赶上。2014年，O2O开始了。
++ 你还没赶上。2015年，社交电商开始了。
++ 你仍然没有赶上。2016年，拼团开始了。
++ 你还是没有赶上。2017年，直播电商开始了。
++ 到了2018年您还没醒，我只能说有人已经醒了，这位快手散打哥，通过短视频一天带货1.6亿。
 
 你说，这个机会窗口什么时候关闭过？只不过它不在大趋势里，打开它的只是一个个小趋势。
 
-这说明啥？总有新机会，总有下一班。哪有末班车？
+这说明啥？*总有新机会，总有下一班。哪有末班车？*
 
-
-5
+## 5
 
 我们再来对比一下，想靠上大趋势的人和想借上小趋势的人，两拨人的想法有什么不同。
 
@@ -302,15 +294,15 @@ tags: [管理]
 
 只要是个做事的人，你不觉得这就是做梦吗？
 
-而想借小趋势的人呢？没有一劳永逸的想法。他只是随时在做准备，把自己感知能力磨得锐利无比，随时等待、捕捉那个小趋势的信号的传来。
+而想借小趋势的人呢？没有一劳永逸的想法。*他只是随时在做准备，把自己感知能力磨得锐利无比，随时等待、捕捉那个小趋势的信号的传来。*
 
 有一句金句，大家都知道：“凡杀不死我的，都让我更强大。”今天，我把这句话改一改，表达一下我们这帮小趋势信奉者的态度——
 
 凡我赶不上的，我就做好准备，到未来等它。
 
-
 # 第三部分：我能看到事实吗？
-1
+
+## 1
 
 今天我们的任务，就是扪心自问：我们这批做事的人，能抓住小趋势吗？小趋势是什么？小趋势是影响趋势的趋势，带来改变的改变。
 
@@ -318,7 +310,7 @@ tags: [管理]
 
 这些问题我提个醒，都很扎心。
 
-先问第一个问题：所有趋势都起源于事实，想抓住小趋势，那就得能认清事实。那问题是，我们看得到事实吗？
+先问第一个问题：*所有趋势都起源于事实，想抓住小趋势，那就得能认清事实。那问题是，我们看得到事实吗？*
 
 我们和世界之间的真实关系，经常会被误解。
 
@@ -328,16 +320,15 @@ tags: [管理]
 
 听完梁宁的这个发现，我心里默默地想，原来有这么多人，跟我一样，相貌中等偏上。
 
-你的五官比例、你的身材尺码，这是真实世界。但是人人都觉得自己相貌中等偏上，那可就是感觉世界了。感觉世界和真实世界，这中间有道鸿沟，而且还有两种力量在把这个鸿沟越拉越大。
+你的五官比例、你的身材尺码，这是真实世界。但是人人都觉得自己相貌中等偏上，那可就是感觉世界了。*感觉世界和真实世界，这中间有道鸿沟，而且还有两种力量在把这个鸿沟越拉越大。*
 
 在鸿沟这边有好多人，我们的亲妈、男朋友或女朋友、商店里的导购，还有美颜相机，他们总是夸我们，长得真好看。这使我们离真相越来越远。这条鸿沟的另外一边呢？其实真相自己，也在往后退，退得离我们越来越远。
 
 比如，经常有朋友说，罗胖，我能不能去你们公司参观一下？我不是不欢迎大家来，但是参观什么？我们公司能被看见的只有三种东西：桌椅板凳、电脑设备，还有一堆你不认识的人。你以为我们有福特生产线吗？我们公司的那些真相，我想给你看，我又做不到。公司的真相，存在于那些一点都不神秘，但是很隐秘的地方，比如大家的交谈、眼神确认、邮件、微信群……这些看不到啊。
 
-真相未必神秘，但很隐秘。
+*真相未必神秘，但很隐秘。*
 
-
-2
+## 2
 
 我们回到真相和感知之间的鸿沟，一边是人类拼命努力，扭曲事实；一边是世界拼命努力，隐藏自己。感觉世界和真实世界就是这么分裂的。说到这，很多人肯定说，分裂就分裂了呗，从来如此，又不影响什么。
 
@@ -351,17 +342,21 @@ tags: [管理]
 
 被我的上进心逼急了之后，广告部的领导语重心长地跟我说：“振宇啊，特别感谢你对我们的信任，但是互联网公司要想上央视春晚，有一个小门槛，达到才有的谈。标准很简单，互联网产品日活得过一个亿，要不然，广告出来的那一瞬间，你的服务器就会崩掉。你崩掉了我们也没法对全国观众交代。 ”
 
+![](/uploads/2019/01/02-05.jpg)
+
 这一口气就给我憋在那了。这个标准确实简单，但我们也确实做不到，只好臊眉耷眼地回去了。
 
 过了两个月，春晚的招标结果出来了，中标的果然是一个日活超过一个亿的互联网产品，大家伙，不能更大了——淘宝。输给它，我服。央视的领导没骗我。人家确实在技术上接得住，有保障。你想啊，双十一那么大的事，人家不都平稳地过来了吗？
 
-又过了俩月，就过年了。你猜怎么着？春晚一开演，淘宝就崩了。大公司也没扛住啊。那一刻，我才知道我躲过了什么，央视的领导对我那是真爱护啊。有句话说，世界上最悲惨的事情是，钱花光了，人还在。但是，我后来才知道，世界上更悲惨的事是，花光自己的钱，搞崩了自己的产品，人还在。
+又过了俩月，就过年了。你猜怎么着？春晚一开演，淘宝就崩了。大公司也没扛住啊。那一刻，我才知道我躲过了什么，央视的领导对我那是真爱护啊。有句话说，世界上最悲惨的事情是，钱花光了，人还在。但是，我后来才知道，*世界上更悲惨的事是，花光自己的钱，搞崩了自己的产品，人还在。*
+
+![](/uploads/2019/01/02-06.jpg)
 
 回到2018年的春节，看看除夕那天晚上到底发生了什么。
 
 后来，我看到淘宝自己的总结，他们知道春晚的流量大，他们还推导了各种极端情况，最终决定稳妥起见，在2017年双十一的基础上，再扩容3倍。结果是什么呢？春晚当晚登录的实际峰值，超过了双十一的15倍。
 
-他们的团队对此的感慨是，我们真的对春晚的力量一无所知。这个事件折射了什么？折射了我们经常对真相一无所知。
+他们的团队对此的感慨是，我们真的对春晚的力量一无所知。这个事件折射了什么？*折射了我们经常对真相一无所知。*
 
 这就是我震惊的全部吗？不是。后来我们听说，当天淘宝的客服电话被打爆了，这个在意料之中，但是有一件事是意料之外，三分之一的客服问题是：买东西怎么填地址？这说明一大批从来没有用过淘宝的人，被春晚从中国的社会结构中翻出来了。
 
@@ -374,15 +369,19 @@ tags: [管理]
 你看，看到事实有多难？
 
 
-3
+## 3
 
 在我们这样的大国，经常会有这样的错觉。
 
-我经常提醒我们公司的同事，你们千万别把自己当主流，要对自己的趣味保持一种警醒和谦卑，不要动不动就以己度人。 
+我经常提醒我们公司的同事，*你们千万别把自己当主流，要对自己的趣味保持一种警醒和谦卑，不要动不动就以己度人。*
+
+![](/uploads/2019/01/02-07.jpg)
 
 比如，我们每个人身边都有好多大学生吧？但是你想过一个问题没有，大学毕业生占我们这个国家人口的总和，也就5%。换句话说，至少有13亿人没有大学毕业文凭。你之所以觉得大学生多，可能是因为你生活在大城市，也可能是因为你很年轻。这并不是说上了大学就怎样，而是说这个世界和你默认的事实不一样。
 
 媒体人沈帅波有这样一句话：“在中国，再众所周知的事情，都起码有一个亿的人不知道，而大多数时候，是十个亿的人都不知道。”
+
+![](/uploads/2019/01/02-08.jpg)
 
 我们很容易忘记，我们生活在一个庞大的、远超过自己感知力的共同体当中。这使得我们想要接近事实的真相，变得难上加难。
 
@@ -392,13 +391,11 @@ tags: [管理]
 
 除了「得到」，我们还有一个少年得到App，里面有一个给孩子讲数学的栏目，叫《数学有意思》，作者是林欣浩老师。
 
-林欣浩问了一个问题：请问等号是什么意思？是左右两边完全一样的意思吗？不。等号的意思是，有些东西不重要。听着有点匪夷所思啊。
+林欣浩问了一个问题：请问等号是什么意思？是左右两边完全一样的意思吗？不。*等号的意思是，有些东西不重要。*听着有点匪夷所思啊。
 
-    比如，我说1+2=2+1，这其实是在说，总数才重要，次序不重要。
-
-    比如，我说你家3个人，我家3个人，加起来等于6个人。这其实是在说，规模才重要，大家之间彼此那个具体关系不重要。
-
-    比如，我们说考个好专业等于工作有保障。这其实是在说，收入才重要，你的爱好不重要。
++ 比如，我说1+2=2+1，这其实是在说，总数才重要，次序不重要。
++ 比如，我说你家3个人，我家3个人，加起来等于6个人。这其实是在说，规模才重要，大家之间彼此那个具体关系不重要。
++ 比如，我们说考个好专业等于工作有保障。这其实是在说，收入才重要，你的爱好不重要。
 
 每当我们用到等号这个工具的时候，其实我们背后都有一句潜台词：有些东西不重要。
 
@@ -406,7 +403,7 @@ tags: [管理]
 
 我们从小就认识的等号，听了这节课之后，我发现，我其实并不懂它。何止是等号，我们从小到大，认的每一个字、读的每一本书、懂的每一个道理、受的每一次教育，认识了多少和等号类似的东西，其实就是一个把真实世界抽象化的过程。过程中，有大量的东西被丢掉了。
 
-这就是人的宿命，我们的心智成长一直伴随着这个过程，一边得到，一边丢掉。刘润老师正在为「得到」做一门新课，专门讲商业洞察力的，他说：“不抽象，我们就无法深入思考；不还原，我们就看不到本来面目。”
+这就是人的宿命，我们的心智成长一直伴随着这个过程，一边得到，一边丢掉。刘润老师正在为「得到」做一门新课，专门讲商业洞察力的，他说：*“不抽象，我们就无法深入思考；不还原，我们就看不到本来面目。”*
 
 你发现没有，刘润老师讲的前半句话，我们一点都不陌生。我们一路受教育过来，就是学这个。但是后半句话，“不还原就看不到本来面目”，我们没地方学。
 
@@ -418,11 +415,9 @@ tags: [管理]
 
 假设我是一个基层的扶贫干部，我手里的工具是很明确的，一个是扶贫政策，一个是各家各户的收入统计，只有这两样我能干活吗？不行。我遇到的问题不是抽象的政策和抽象的数字之间的对比关系，我遇到的问题往往是这样——
 
-    一家人收入高于贫困线，但是家里有一个瘫痪在床的病人，要不要纳入扶贫名单？
-
-    一家人收入低于贫困线，但是家里有三个壮劳力，整天在家打游戏，该不该直接发他们救济金？
-
-    还有一家人，今年收入比去年多了几百块，抽象地看数字，算脱贫了。但这个变化有可能是因为农产品价格上涨等偶然因素，他自己并没有觉得生活水平有本质的变化。要把他从扶贫名单上划掉吗？
++ 一家人收入高于贫困线，但是家里有一个瘫痪在床的病人，要不要纳入扶贫名单？
++ 一家人收入低于贫困线，但是家里有三个壮劳力，整天在家打游戏，该不该直接发他们救济金？
++ 还有一家人，今年收入比去年多了几百块，抽象地看数字，算脱贫了。但这个变化有可能是因为农产品价格上涨等偶然因素，他自己并没有觉得生活水平有本质的变化。要把他从扶贫名单上划掉吗？
 
 你看，我必须把扶贫政策，还原成每一个家庭的真实情况，才能开展工作啊。
 
@@ -430,11 +425,9 @@ tags: [管理]
 
 你看，看到事实有多难？ 
 
-过去，我们以为能把世界抽象化，这是个很大的本事，因为你能用一个很高明的、很简洁的抽象模型来解释这个世界，那是最了不起的事，那是牛顿和爱因斯坦式的成就。但是，对做事的人来说，使命不止于此。还原能力才是做事的人，逼近事实真相、把握小趋势最稀缺的能力。
+过去，我们以为能把世界抽象化，这是个很大的本事，因为你能用一个很高明的、很简洁的抽象模型来解释这个世界，那是最了不起的事，那是牛顿和爱因斯坦式的成就。但是，对做事的人来说，使命不止于此。*还原能力才是做事的人，逼近事实真相、把握小趋势最稀缺的能力。*
 
-
-4
-
+## 4
 
 还原能力，就是我们逼近事实真相的一副眼镜。戴上了这副眼镜，你看待世界，评估价值的标准就完全不一样了。
 
@@ -444,7 +437,9 @@ tags: [管理]
 
 如果是一个制造业的园区呢？它对真实世界会提出苛刻的要求：得有运转良好的港口道路、良好的社会治安、稳定的税收和行政方面的治理能力；得有劳动技能、劳动态度都良好的工人；有稳定的能源、原料、供应；还得有周边的居住、餐饮、医疗、教育等配套设施……
 
-一座工厂，它必须连接一个真实世界。我们甚至可以说，一个国家制造业水平的高低，本身就是它社会治理能力的晴雨表。说到这，你就明白了，为什么中国经济不能过度虚拟化。不是虚拟产业不好，而是制造业不能丢。制造业是我们构建一个真实的、良好社会的压舱石。
+一座工厂，它必须连接一个真实世界。我们甚至可以说，一个国家制造业水平的高低，本身就是它社会治理能力的晴雨表。说到这，你就明白了，为什么中国经济不能过度虚拟化。不是虚拟产业不好，而是制造业不能丢。*制造业是我们构建一个真实的、良好社会的压舱石。*
+
+![](/uploads/2019/01/02-09.jpg)
 
 我们再看，制造业和服务业，如果你看到抽象的表层，它就是个数字。但是你往底下看，如果你真的有看到事实的能力，你就会看到更多的人的因素，数字就有了区别。再往下看，它们体现为不同的人和人之间的关系，这个差别就更大了。越往底下看，越往真实世界走，这个差别就越大。你看得越深，就会发现它们在这个社会的存在感大小是不一样的。这就是戴上还原这副眼镜的意义。
 
@@ -466,22 +461,21 @@ tags: [管理]
 
 现在很多人的感受，就好比你住在一栋100层大楼的第100层。突然，你的隔壁开始装修，动静很大。一会儿砸墙，一会儿电钻，你确实感到很混乱，怀疑楼要塌。但是只要你往下一看，发现就我这层装修，底下99层都没事，稳如泰山。你担心个啥？
 
-说到我们中国的基本面，你只要看到中国的基本现实，它就不再是那个数字。中国是什么？它是好多好多全世界最勤奋、最想通过努力改变命运的一群人组成的。有了这个对真相的把握，你担心个啥？
+说到我们中国的基本面，你只要看到中国的基本现实，它就不再是那个数字。*中国是什么？它是好多好多全世界最勤奋、最想通过努力改变命运的一群人组成的。*有了这个对真相的把握，你担心个啥？
 
-
-5
+## 5
 
 巴菲特还有一个提醒：没有一个人可以靠做空自己的祖国成功。他为什么这么说？这不是在讲什么爱国主义，而是说每一个人的成功，都是在分享一个共同体的红利。我们一生的所有红利，其实都来自于这样一条经济增长曲线。 
 
 尤其是对于我们中国人来说，我们的祖先埋骨于此，我们的血脉扎根于此，我们青春在此，也将终老于此，除了盼着它好、相信它好。我们还有什么更好的办法吗？
 
-最聪明的做法，就是做一个理性乐观派。只有这个选择既符合我们的理性，也符合我们的情感，还符合我们的利益。 
+*最聪明的做法，就是做一个理性乐观派。*只有这个选择既符合我们的理性，也符合我们的情感，还符合我们的利益。 
 
 回到这部分的主题，我想说的是：还原的力量极其重要，但是很容易被忽略。那么问题来了，我们怎么拥有这种还原的能力呢？
 
 没办法，上半场确实没怎么学过如何还原，所以要求我们开始下半场的修行。上半场的修行，更多是抽象和简化；下半场的修行，就得加上还原和丰富。
 
-其实修行的具体方法早就有人说过了，就是六个字——多元思维模型。让很多种认识世界的模型在自己的脑子里并存。
+其实修行的具体方法早就有人说过了，就是六个字——*多元思维模型*。让很多种认识世界的模型在自己的脑子里并存。
 
 今年我们试验了一个新的项目，叫得到大学。有人说得到大学是商学院，是培训班，错了。那些事有人做得很好，不需要得到大学再来做一遍。得到大学做的是一件全新的事，它是为做事的人提供解决具体问题的方法。所以得到大学最核心的教学内容，就是多元思维模型。
 
@@ -489,15 +483,11 @@ tags: [管理]
 
 正如我们刚开始所预想的，这所学校里发生了一些奇妙的效应——
 
-    在它里面，一位医生会分享，如何在信息不完备情况下，做出性命攸关的决策；
-
-    一位特种兵会分享，怎么建立集体心流，打造一个有战斗力的组织；
-
-    一位核电站的总工程师会分享，怎么运行一个超大型项目；
-
-    一位研究精益管理的工程师会分享，怎么优化一家卖兰州拉面的夫妻店；
-
-    一位火箭设计师会分享，怎么用湍流原理理解股市……
++ 在它里面，一位医生会分享，如何在信息不完备情况下，做出性命攸关的决策；
++ 一位特种兵会分享，怎么建立集体心流，打造一个有战斗力的组织；
++ 一位核电站的总工程师会分享，怎么运行一个超大型项目；
++ 一位研究精益管理的工程师会分享，怎么优化一家卖兰州拉面的夫妻店；
++ 一位火箭设计师会分享，怎么用湍流原理理解股市……
 
 平时，这些人都生活在你的圈子之外。但是在得到大学，他们会带来各自在职业中养成的思维模型，大家在一起互相享用、彼此嵌入。
 
@@ -505,16 +495,16 @@ tags: [管理]
 
 现在我可以回答这个问题了：能，如果你掌握多元思维模型。
 
-说到这，你才会明白为什么我特别喜欢菲茨杰拉德的一句话：“一个人能同时保有全然相反的两种观念，还能正常行事，是第一流智慧的标志。”
+说到这，你才会明白为什么我特别喜欢菲茨杰拉德的一句话：*“一个人能同时保有全然相反的两种观念，还能正常行事，是第一流智慧的标志。”*
 
  
 
 # 第四部分：我能感知“非共识”吗？
 1
 
-多年之后，关于2018年的这场跨年演讲，也许你什么都不记得，但是，我特别希望你还记得下面这句话：决定我们个体命运的，除了众所周知的大趋势，更是那种需要我们自己去主动发现的小趋势。
+多年之后，关于2018年的这场跨年演讲，也许你什么都不记得，但是，我特别希望你还记得下面这句话：*决定我们个体命运的，除了众所周知的大趋势，更是那种需要我们自己去主动发现的小趋势。*
 
-为了更精准地感知小趋势，刚才我们自问了第一个问题：我看到事实了吗？那么现在我们开始扎心第二问：我能感知“非共识”吗？
+为了更精准地感知小趋势，刚才我们自问了第一个问题：我看到事实了吗？那么现在我们开始扎心第二问：*我能感知“非共识”吗？*
 
 听到“非共识”这个词，挺陌生，今年是梁宁把这个词带到了我面前。
 
@@ -522,7 +512,9 @@ tags: [管理]
 
 梁宁说，这一年，我见过的绝大部分人跟你的反应都一样。以为非共识就是跟这个世界抬杠，抬杠谁不会，见什么骂什么，看什么都不顺眼，什么都想否定。那不叫“非共识”，那叫“反共识”，反共识搞长了，是自绝于人类。那怎么会是创新呢？
 
-梁宁讲的非共识，是个微妙得多的概念，是在原来社会的共识里面，突然有了跟大家有了不一样的想法。请注意，这没有完。那个瞬间有点像孩子离开母体、分娩降生那一刻。孩子的感受是，这一刻受到了母亲的排斥，来到孤独的、寒冷的世界，他感受到的这种压力，压得他要大声啼哭。但很快他就会被母亲拥入怀抱。所以，这是两个过程完整地、连续地被接在了一起。从被排斥到被承认，从脱离共识到再造共识。整个过程，才叫非共识。
+梁宁讲的非共识，是个微妙得多的概念，是在原来社会的共识里面，突然有了跟大家有了不一样的想法。请注意，这没有完。那个瞬间有点像孩子离开母体、分娩降生那一刻。孩子的感受是，这一刻受到了母亲的排斥，来到孤独的、寒冷的世界，他感受到的这种压力，压得他要大声啼哭。但很快他就会被母亲拥入怀抱。所以，这是两个过程完整地、连续地被接在了一起。*从被排斥到被承认，从脱离共识到再造共识。整个过程，才叫非共识。*
+
+![](/uploads/2019/01/02-10.jpg)
 
 这好像是在讲一个陌生的词。但其实，各行各业都在用不同的角度、不同的话诠释这个非共识时刻。
 
@@ -530,7 +522,7 @@ tags: [管理]
 
 政治家罗斯福也有一句话：“你一心想领导人们前进，回头一看，跟着的人却一个都没有，真可怕呀。”伟大的政治家从来如此。从自己提出一个主张，到发现没人跟这个可怕的时刻，到众多的人追随，你成了领袖的这个时刻——这段时间窗口，也是非共识。
 
-我们这一代人提起创新总觉得特别高大上，或巧妙新奇，或震古烁今，一旦出现，大家恍然大悟，疯狂鼓掌。但是在实际情况真的是这样么？创新者往往承受了超出想象的压力。梁宁之所以说创新过程是一个“非共识”的过程，是想强调，穿破当下共识难，承受当下共识的压力更难。
+我们这一代人提起创新总觉得特别高大上，或巧妙新奇，或震古烁今，一旦出现，大家恍然大悟，疯狂鼓掌。但是在实际情况真的是这样么？创新者往往承受了超出想象的压力。*梁宁之所以说创新过程是一个“非共识”的过程，是想强调，穿破当下共识难，承受当下共识的压力更难。*
 
 从事后看，成功者的路上，那是一个正确连着一个正确，一个胜利接着一个胜利，但这是事后看。如果从过程中看，你就会发现，在他的路上，那是一个非共识连着一个非共识，甚至在别人看来，是一个错误接着一个错误。在他自己看来，是一个压力连着一个压力。
 
@@ -544,14 +536,15 @@ tags: [管理]
 
 是我们中国人笨吗？好几千年才让纸换个姿势。不，就这还是中国人老祖宗先发明的。就隔着一层窗户纸，几千年都盼不来那一线划过它的光明。你就说，创新难不难？
 
-所以我们必须要回到创新的现场，才能观察创新。才能感受到那种真实的艰难，和突破之后的震撼。每一项创新，在它诞生的那一瞬间，都好像是突然点亮了一盏灯，照亮了长夜。
+所以我们必须要回到创新的现场，才能观察创新。才能感受到那种真实的艰难，和突破之后的震撼。*每一项创新，在它诞生的那一瞬间，都好像是突然点亮了一盏灯，照亮了长夜。*
+
+![](/uploads/2019/01/02-11.jpg)
 
 我们现在生活在一个创新层出不穷的时代。每天都有好多创新，不是说创新容易，只不过这样的点灯时刻变得越来越多而已。我们今天看到的一个明朗的白昼，其实是由无数盏这样的灯彼此辉映而成的。
 
 就在我自己这短短几年的创业历史上，其实就感受过好几个这样的时刻。
 
-
-2
+## 2
 
 你现在看到的，是早期的《罗辑思维》视频节目的一个截屏。
 
@@ -577,9 +570,9 @@ tags: [管理]
 
 几年之后，当得到App被市场初步认可之后，我知道了两件事：
 
-第一，一个创新的想法，在它冒头的那一刻，连亲爹亲妈都觉得它是个怪物；
+*第一，一个创新的想法，在它冒头的那一刻，连亲爹亲妈都觉得它是个怪物；*
 
-第二，如果它后来不被社会接受，它就真的是个怪物。
+*第二，如果它后来不被社会接受，它就真的是个怪物。*
 
 这两个逻辑结合起来理解，才是梁宁说的“非共识”。
 
@@ -587,20 +580,21 @@ tags: [管理]
 
 “任何在我出生时已经有的科技，都是稀松平常的世界本来秩序的一部分。任何在我15-35岁之间诞生的科技，都是将会改变世界的革命性产物。任何在我35岁之后诞生的科技，都是违反自然规律，要遭天谴的。”
 
-这段话描述了很多人对科技创新的心态。这就是非共识的宿命，任何创新在它诞生的那一刻，先会被当作“异端邪说”，然后成为“伟大革命”，最后还原为“稀松平常”。
+这段话描述了很多人对科技创新的心态。这就是非共识的宿命，*任何创新在它诞生的那一刻，先会被当作“异端邪说”，然后成为“伟大革命”，最后还原为“稀松平常”。*
 
 这是一个神奇的循环，不走完这个循环，就不是真正的创新。
 
 我们这一代人就亲身经历了很多这样的过程。比如在我年轻的时候，百货商场就是“本该如此”，超市就是“伟大革命”，淘宝就是“异端邪说”。到了我女儿出生的时候，超市变成了“本该如此”，淘宝变成了“伟大革命”，今年拼多多之类的，就成了“异端邪说”。
 
-但是请注意，这并不是在说你当了“异端邪说”就了不起。就拿拼多多来说，它必须像淘宝一样走完从叛逆到回归、从被非议到被认可的过程，走完之后，这才叫“非共识”。
+但是请注意，这并不是在说你当；了“异端邪说”就了不起。就拿拼多多来说，它必须像淘宝一样走完从叛逆到回归、从被非议到被认可的过程，走完之后，这才叫“非共识”。
 
+![](/uploads/2019/01/02-12.jpg)
 
-3
+## 3
 
-下一个问题来了：非共识怎么达成、怎么找到呢？
+下一个问题来了：*非共识怎么达成、怎么找到呢？*
 
-梁宁说了一句让我琢磨了半天的话：非共识从来不反对什么，它只是把被忽略的东西呈现出来而已。
+梁宁说了一句让我琢磨了半天的话：*非共识从来不反对什么，它只是把被忽略的东西呈现出来而已。*
 
 梁宁这句话不简单，给了我们一个重要的路标：非共识不是什么天外飞仙，它本来就在，我们只是把它重新唤醒。 
 
@@ -624,16 +618,17 @@ tags: [管理]
 
 这不是什么餐厅故意作怪，搞什么奇技淫巧。现在满足这种需求的商业模式到处都是。租房有一人租，旅行有一人团，便利店里开始卖两片装的面包。2018年天猫“双十一”显示，迷你微波炉销量增长980%，迷你洗衣机销量增长630%，一人吃的火锅销量增长210% ……这背后都是同一类非共识：一个人也想好好生活。
 
-刚才我们举的例子，你发现什么没有？看起来是奇思妙想，但它们背后都是一个一直都存在、但是一直被忽略的潜在需求。看起来不是共识，但只要你回到人心深处和历史深处，它们是什么新东西？它们一直都在，明明白白。非共识，来源于更深处的共识。 
+刚才我们举的例子，你发现什么没有？看起来是奇思妙想，但它们背后都是一个一直都存在、但是一直被忽略的潜在需求。看起来不是共识，但只要你回到人心深处和历史深处，它们是什么新东西？*它们一直都在，明明白白。非共识，来源于更深处的共识。*
+
+![](/uploads/2019/01/02-13.jpg)
 
 所以，很多人看到创新者都会问：你干的是什么事，你疯了吗？创新者心里其实在说：你瞎了吗？
 
-
-4
+## 4
 
 人类的很多古老共识，并没有沉底，只是在潜水，它们还会回到水面。
 
-世界上有很多创新，不是往前，不是走向从来没人去过的陌生地带，而恰恰是往回走。
+*世界上有很多创新，不是往前，不是走向从来没人去过的陌生地带，而恰恰是往回走。*
 
 比如说，哈根达斯在中国市场推出冰淇淋月饼在当年是一个创新，但是这个创新的原点是月饼。仿照天上的月亮做个小吃，在1000多年前的唐朝、开始过中秋节的时候就定下来了。央视在35年前办春晚是一个创新，但是这个创新的原点在上古时代有“除夕”这个概念的时候就定下来了。
 
@@ -641,7 +636,7 @@ tags: [管理]
 
 2011年，微信出现，为什么微信的开屏图永远是这个样子，从来不换？对啊，微信是一个10亿用户量级的产品，它不能搞怪，搞什么奇思妙想，它的开机画面必须指向所有人都认同的故乡。请问，所有人都认同的故乡，除了地球，还有什么别的选择吗？请问这张图片的样子是什么时候定下来的？至少40亿年前。
 
-说到这里，对于非共识的理解，我们又深化了一层，用华杉和华楠两位老师发明的说法：达成非共识的过程，是一个“回到母体，强化母体”的过程。
+说到这里，对于非共识的理解，我们又深化了一层，用华杉和华楠两位老师发明的说法：*达成非共识的过程，是一个“回到母体，强化母体”的过程。*
 
 简单地说，所谓的创新，就是要回到一个古老的事物，但是用全新的手段把它再做一遍。所谓的非共识，就是你初看不认识，但是后来你知道，原来是老相识。
 
@@ -659,19 +654,19 @@ tags: [管理]
 
 如果站在人类文明的角度来看，你会发现，把iG夺冠、电子竞技、中国战队赢了，看成新东西，可能恰恰是把它看小了。
 
-有三件事，人类自古以来，就会为它激动，为它落泪欢呼，一点就着。那就是：庆典、征服和竞技。这是经典的传播学理论。
+有三件事，人类自古以来，就会为它激动，为它落泪欢呼，一点就着。那就是：*庆典、征服和竞技*。这是经典的传播学理论。
 
 我们就拿竞技这件事来说，从古至今一脉相承：从我们的老祖先在草原上追逐猎物开始，是竞技吧？到古希腊人的奥林匹克运动会，是竞技吧？再到现在的各种排行榜、选秀PK、手机性能跑分儿，都是竞技吧？本质上这些事，都来自于我们人类同一种精神需求——得比划比划，分出个高下。这是同一件事，只是在不同时代的不同表现方式而已。
 
 今天年轻人为iG夺冠流泪欢呼，我这个岁数确实体会不了。但是一切回到我的少年时代，我会为同样的事情欢呼，我同样理解他们的心情。少年时代我为中国女排五连冠欢呼、为聂卫平赢了中日围棋擂台赛欢呼，这是一个事。
 
-古老的母体，在不同时代化身为不同的样子。我们每一个人要做的是，不断回到它、不断把这个时代最好最新的东西献给它、强化它。
+*古老的母体，在不同时代化身为不同的样子。我们每一个人要做的是，不断回到它、不断把这个时代最好最新的东西献给它、强化它。*
 
 量子体育的创始人，也是国内主要的电竞比赛组织者应书岭就跟我感慨说：根据母体这个说法，电竞不是新怪物。“竞”就是它所回到的那个母体，人类一以贯之，“电”就是这个时代对它的强化，是我这个时代的人能为母体做的贡献。 
 
 回到刚才提出的那个问题：我能感知“非共识”吗？这个问题的本质是，我们能创新吗？
 
-现在我们可以回答了：能，只要你有本事用最新的方法把那些古老的事情再做一遍。其实创新一直都存在一个稳定的路径，我在法学家刘晗老师的著作里就读到了这个路径：“若不进入传统，则无法添加新物。”
+现在我们可以回答了：能，只要你有本事用最新的方法把那些古老的事情再做一遍。其实创新一直都存在一个稳定的路径，我在法学家刘晗老师的著作里就读到了这个路径：*“若不进入传统，则无法添加新物。”*
 
 
 # 第五部分：我的时间够用吗？
@@ -680,25 +675,25 @@ tags: [管理]
 
 今天我的核心任务是希望你记住这句话：决定我们这一代人个体命运的，除了众所周知的大趋势，更是那种需要我们每一个人自己去主动发现的小趋势。
 
-刚才我们已经问了自己两个问题，下面我们要发出的是扎心第三问：我的时间够用吗？
+刚才我们已经问了自己两个问题，下面我们要发出的是扎心第三问：*我的时间够用吗？*
 
 很多人觉得时间不够用。因为我们处在一个时间无限碎片化、空间无限被分割的时代。有人用“时空内爆”这个词来描述这个感受。
 
 小说变成了段子，专辑变成了单曲，大片变成了短视频，站台上的别离变成了微信上的常联系。可不就是碎片了吗？
 
-今年，著名出版人方希老师说了一个词——“摸机率”，简直就是时代符号。 
+今年，著名出版人方希老师说了一个词——*“摸机率”*，简直就是时代符号。 
 
 什么意思呢？这是一个衡量会议质量的指标。一个小时的会议，你会忍不住摸几次手机？次数越多，会议质量越差。过去，这个指标是用上厕所的次数来衡量。所以，将来我们夸一个会议开得好，就不再是“全程无尿点”，而是“全程不摸机”。
 
 所以，这个时代很多人感慨，我们的活法，从岁月静好变成了岁月惊惶。
 
-扑面而来的信息，多到了我们受不了，杂到了我们接不住。我们感觉时间不够用，于是就有了一个词，叫“信息过载”。
+扑面而来的信息，多到了我们受不了，杂到了我们接不住。我们感觉时间不够用，于是就有了一个词，叫*“信息过载”*。
 
 听起来很有道理，这个世界不正在变得快速、浅薄、嘈杂、凌乱吗？但是，这个问题不能深想，深想就会发现，所谓的信息过载立不住。信息过载是我们这个时代的事吗？就说中国历史上，第一次喊出来“信息太多了，信息过载了，受不了了”这种痛苦的人是谁？庄子。战国时的人。那个时候，连纸都没有，能有多少书？他就开始叫苦了：“吾生也有涯，而知也无涯。以有涯随无涯，殆已。”意思就是，知识多，人生短，追着学，就得挂。
 
 信息过载哪是我们这代人遇到的问题，有信息、有知识的时候这个问题就已经在了，我们每一代人都这样喊。习惯了就好了。
 
-万维钢老师有一个判断：所谓信息过载，原因只有一个，你对环境的熟悉程度太低。甭管什么时代，只要你到陌生的地方，就会觉得眼花缭乱、信息过载。你到一个陌生的城市是这样，你去一个新开的百货商场是这样，刘姥姥进大观园也是这样。
+万维钢老师有一个判断：*所谓信息过载，原因只有一个，你对环境的熟悉程度太低。*甭管什么时代，只要你到陌生的地方，就会觉得眼花缭乱、信息过载。你到一个陌生的城市是这样，你去一个新开的百货商场是这样，刘姥姥进大观园也是这样。
 
 而在熟悉的地方，你只会觉得新东西太少。你要是不信，我们做一个思想实验。
 
@@ -708,20 +703,16 @@ tags: [管理]
 
 那怎么能叫信息过载呢？在熟悉的地方，不会有信息过载。
 
-
-2
+## 2
 
 关于时间，对我们这代人确实是个非常严重的问题。但问题不是不够用，而是太长了。我们都还没有准备好怎么用这个太过漫长的时间。
 
 此话怎讲？前不久，生命科学家王立铭老师告诉我这么几个事，全都是在2018年发生的——
 
-    九价HPV疫苗在国内上市，宫颈癌这种癌症，居然可以用疫苗来预防；
-
-    进口抗癌药物关税统一下降为0，中国人买抗癌药更便宜；
-
-    两位科学家因为他们在癌症免疫疗法方面的贡献，获得了今年的诺贝尔奖；
-
-    从2011年起，每年至少有10种癌症新药上市，迄今已经有超过150种癌症药物在临床应用。
++ 九价HPV疫苗在国内上市，宫颈癌这种癌症，居然可以用疫苗来预防；
++ 进口抗癌药物关税统一下降为0，中国人买抗癌药更便宜；
++ 两位科学家因为他们在癌症免疫疗法方面的贡献，获得了今年的诺贝尔奖；
++ 从2011年起，每年至少有10种癌症新药上市，迄今已经有超过150种癌症药物在临床应用。
 
 把王立铭告诉我的这些事实，拼起来说明了什么呢？说明众病之王癌症，这个人类寿命最凶残的敌人，长期来看，它将不再是寿命的终结者，它将渐渐变成一种可管理的慢性病。
 
@@ -729,19 +720,19 @@ tags: [管理]
 
 王立铭所说的关于癌症的这些信息，在我们这些做事的人听起来，可就不仅仅是一个医疗信息那么简单，也不是只是一个科学进展，而是一个小趋势给我们发射的清晰信号。更不必说在癌症治疗技术进步的时候，其他医疗技术、营养、公共卫生、食品工业等行业都在大踏步进步。
 
-那结论就来了，听着有点匪夷所思：我们这一代人，大概率上，人人都有机会活过100岁。这不是我的结论，几乎是医学界的共识，具体的论证我就不多举了。有一本书《百岁人生》讨论的就是这个问题，得到App里有电子书，也有听书版，推荐大家去了解一下。
+那结论就来了，听着有点匪夷所思：*我们这一代人，大概率上，人人都有机会活过100岁。*这不是我的结论，几乎是医学界的共识，具体的论证我就不多举了。有一本书*《百岁人生》*讨论的就是这个问题，得到App里有电子书，也有听书版，推荐大家去了解一下。
 
 如果回到刚开始问的那个问题：我的时间够用吗？回答是：太够了。
 
-活得长，有充分的时间，这是一个好消息。但是它会变成了我们这代人的一个大问题，为啥？因为我们每一个人、我们整个社会都没有为这个好消息、为这么长的寿命做好准备。
+活得长，有充分的时间，这是一个好消息。但是它会变成了我们这代人的一个大问题，为啥？*因为我们每一个人、我们整个社会都没有为这个好消息、为这么长的寿命做好准备。*
 
 比如我自己，按原定计划，17年后，2035年的1月1日凌晨，我20年的跨年演讲就结束了，那一天我刚61岁，这是一个标准的退休年龄，我该去安度晚年了。但你想想，60岁就退休，这是谁定的？这只是我们过去的一个习惯，是在原来对寿命预期的基础上定下来的。如果我能活到100岁，或者120岁呢？那61岁我才刚刚人到中年，后面还有大几十年呢，我怎么可能退休呢？那时我应该说，来呀，干活呀，反正有大把时光。
 
 所以你看，这是我们在百岁人生的框架下面对自己的一个极大挑战。做事的人，是不肯把这么长的时间用来虚度的。
 
-可我还能干啥呢？如果我此前没有为此做好准备，我多少都会有这样的疑惑。这是我面临的第一个挑战。
+*可我还能干啥呢？*如果我此前没有为此做好准备，我多少都会有这样的疑惑。这是我面临的第一个挑战。
 
-同时，第二个问题出现了：我怎么和我的孩子相处？
+同时，*第二个问题出现了：我怎么和我的孩子相处？*
 
 活得长，影响的不仅是我们自己。你想过没有，我们和我们孩子之间的关系，会因此变得不一样。
 
@@ -755,9 +746,9 @@ tags: [管理]
 
 连宝贝、好东西都这样，年轻时候成功的经验和观念，也传不下去了。现在我们说，你要和你的孩子做朋友，这好像还是个比方，是一种理想。但在百岁人生的框架下，你如果不能和你的孩子、你的父母成为真正的朋友，你们怎么相处得下去？
 
-我们每个人对自己的人生和后辈的幸福，总有一些计划。但是这些计划都建立在一个默认的基础上，就是这个时代的预期寿命。当预期寿命变化的时候，我们的计划有的时候就会变成变化。我想到了泰森的那句话：“每个人都有一个计划，直到被一拳打到脸上。”
+我们每个人对自己的人生和后辈的幸福，总有一些计划。但是这些计划都建立在一个默认的基础上，就是这个时代的预期寿命。当预期寿命变化的时候，我们的计划有的时候就会变成变化。我想到了泰森的那句话：*“每个人都有一个计划，直到被一拳打到脸上。”*
 
-接下来，是第三个挑战：婚姻可能也得重新定位了。
+接下来，是*第三个挑战：婚姻可能也得重新定位了。*
 
 亲密关系对于我们的人生特别重要，但是我们一生当中能维持多长时间的亲密关系？我们过去那种对于长久婚姻的终极想象，其实是有顶的。结婚50年是“金婚”，60年叫“钻石婚”，再往上就没有定义了。因为人类过去绝大多数活不到那岁数，寿命限制了我们的想象力。
 
@@ -767,11 +758,11 @@ tags: [管理]
 
 过去，婚姻是成年的第一件事，是人的成年礼。只有结了婚的人，才被认可为合格的社会细胞。而现在年轻人是怎么想的？婚姻，是把自己的人生整理好后才做的事。年轻人想，我人生道路还没定型呢，我自己还没想清楚呢，我爱什么样的人，跟什么样的人过一辈子还不知道呢，结啥婚？对，年轻人想的是：匈奴未灭，何以家为。
 
-以前关于婚姻，我们美好的愿望是银婚、金婚、钻石婚。从今往后，对婚姻最好的祝福有一个词——“顶石婚”。 
+以前关于婚姻，我们美好的愿望是银婚、金婚、钻石婚。*从今往后，对婚姻最好的祝福有一个词——“顶石婚”。*
 
 啥叫“顶石”呢？就是修建建筑的时候，当其他都修好了，最后放上去的、在拱顶上的那块石头。它标志着这座建筑从此建成了，真正屹立在世间了。拱顶石是一座建筑的落成典礼，婚姻就像拱顶一样，它将是人生的落成典礼，所以“顶石婚”才是未来婚姻的最好祝福。如果你和你的父母为什么时候结婚达不成共识，你就可以告诉他们，不着急，你要一桩顶石婚。
 
-说完结婚我们再来看，在百岁人生背景下的第四个挑战：职业会发生什么变化？
+说完结婚我们再来看，在百岁人生背景下的*第四个挑战：职业会发生什么变化？*
 
 现在年轻人毕业进入一个行业，每一个行业都是一座大山，我们是默认要在这座山上一直往上爬的，所以才有一句古训叫“男怕入错行，女怕嫁错郎”，也因此才有那么多人那么在意第一份工作。因为不能错，错了，一辈子就完了。很多人在职场上那么谨小慎微，那么恐惧，就是因为这个，即使自己非常痛苦，也没有勇气修正重来。
 
@@ -789,9 +780,9 @@ tags: [管理]
 
 我这不是在跟你讲励志故事，这在未来将是人生常态。60岁，上个大学；70岁，出来创业；80岁，新学一门手艺，都不再稀奇。这是我们这一代人一定会经历的过程。不然等到100岁再后悔吗?何苦来哉？
 
-我特别希望刚才这段，你能和你的父母一起看。如果没看到，没关系，跨年演讲的视频优酷上一直会有，有机会建议给父母看一看。如果他们很固执，不愿意看、听不进去，你至少一定要把这句话告诉他们：“种一棵树最好的时间是十年前，其次就是现在。”来得及的呀，一切都来得及的呀！
+我特别希望刚才这段，你能和你的父母一起看。如果没看到，没关系，跨年演讲的视频优酷上一直会有，有机会建议给父母看一看。如果他们很固执，不愿意看、听不进去，你至少一定要把这句话告诉他们：*“种一棵树最好的时间是十年前，其次就是现在。”*来得及的呀，一切都来得及的呀！
 
-我们继续来看百岁人生给我们带来的第五个挑战：如何面对挫折？
+我们继续来看百岁人生给我们带来的*第五个挑战：如何面对挫折？*
 
 我们来简单描述一下一个人的现状：他创业办了一个公司，花了上百亿，全部赔光了，欠了好多债，有一千万个债主，还被法院下了限制令，连飞机都不能坐。你觉得这人是不是完了啊？这辈子是不是就交代了？走投无路了？
 
@@ -801,12 +792,11 @@ tags: [管理]
 
 在百岁人生的坐标系里面，一个年轻人如果遇到了挫折，可别只记得丘吉尔说的“永不放弃”，而应该记得丘吉尔的另一句话——
 
-“这不是结束，甚至不是结束的开始，只是开始的结束”。
+*“这不是结束，甚至不是结束的开始，只是开始的结束”。*
 
 刚才我们一口气说了五大挑战，百岁人生确实会给我们出很多难题。但是，最困扰我们的其实不是那么长的时光怎么办，而是在这么长的时光里，我们必须调整人生选择的标准。
 
-
-3
+## 3
 
 在那么长的时光里，我们做选择的标准，也许就不是眼下的利弊了，而是要叠加进一个时间的因素。 
 
@@ -818,7 +808,7 @@ tags: [管理]
 
 告诉大家一个好消息，她答应了。张泉灵已经正式就任「少年得到」董事长，也正在为「少年得到」打造一个杀手级产品。不久之后，她会自己向全市场宣布。她宣布的那一刻，就是她向市场作出长期承诺的那一刻，上面绑定的是她个人的社会信用。
 
-你看，她的这种行动方式和思考问题的方式，能给我们特别大的启发。就是当你做一个决定的时候，在百岁人生的坐标下，得分得清什么能穿越时间，什么会被时间过滤。所有能穿越时间的东西，就该坚守，因为人生太长了。所有会被时间过滤的，该翻篇就翻篇，因为人生太长了。
+你看，她的这种行动方式和思考问题的方式，能给我们特别大的启发。就是当你做一个决定的时候，在百岁人生的坐标下，得分得清什么能穿越时间，什么会被时间过滤。*所有能穿越时间的东西，就该坚守，因为人生太长了。所有会被时间过滤的，该翻篇就翻篇，因为人生太长了。*
 
 还记得刚才我们问的那个问题吗？我时间够用吗？说到这儿，想必你已经知道答案了。
 
@@ -828,23 +818,21 @@ tags: [管理]
 
 请看证据，印象笔记的唐毅给我提供了一组对比——
 
-    5月份，在朋友圈里最热闹的话题是菊姐，很闹腾吧？但是，大家默默收藏最多的一篇文章是《记住这1582个字，搞定思维导图》。
-
-    6月份，社交平台上最火的事是“转发这个杨超越”，很宿命吧？但是，在别人看不见的时候，大家都去收藏的一篇文章是《如何独立思考？这里有一份全指南》。
-
-    9月份，娱乐圈发生了很多大事，很碎片吧？但其实，被收藏最多的那篇文章是《如何真正把你的知识体系建立起来？3000字就给你说清楚》。
-
-    10月份，你的印象可能是大家都在掬一把热泪、缅怀金庸，很悲情吧？但此时，在收藏夹里排名第一的是《人生最重要的事：建立自己的商业模式》。
++ 5月份，在朋友圈里最热闹的话题是菊姐，很闹腾吧？但是，大家默默收藏最多的一篇文章是《记住这1582个字，搞定思维导图》。
++ 6月份，社交平台上最火的事是“转发这个杨超越”，很宿命吧？但是，在别人看不见的时候，大家都去收藏的一篇文章是《如何独立思考？这里有一份全指南》。
++ 9月份，娱乐圈发生了很多大事，很碎片吧？但其实，被收藏最多的那篇文章是《如何真正把你的知识体系建立起来？3000字就给你说清楚》。
++ 10月份，你的印象可能是大家都在掬一把热泪、缅怀金庸，很悲情吧？但此时，在收藏夹里排名第一的是《人生最重要的事：建立自己的商业模式》。
 
 不用再多说了，已经铁证如山。看到这个对比，你想到的是啥？对，就是学校里那个最讨厌的学霸，天天考100分，却总说自己不学习。你要知道，这种人在你身边可到处都是。其他人我不知道，但看我们跨年演讲的人基本都是。所以，这个时代不要在朋友圈里观天下，找机会翻翻他们的收藏夹。
 
-印象笔记的唐毅说了一句话，揭穿了我们这代人，我觉得是我今年看到很扎心的一句话：“你在朋友圈里又佛又丧，你在收藏夹里偷偷地积极向上。”
+印象笔记的唐毅说了一句话，揭穿了我们这代人，我觉得是我今年看到很扎心的一句话：*“你在朋友圈里又佛又丧，你在收藏夹里偷偷地积极向上。”*
 
 
 # 第六部分：我的力量从哪里来？
-1
 
-刚才我们已经问了三个问题：我们看到了事实吗？我们能感知非共识吗？我们的时间够用吗？接下来，我想提出第四个问题：想抓住小趋势，我们的力量从哪里来？甭管抓住多少小趋势，我们总得有力量去实现它。
+## 1
+
+刚才我们已经问了三个问题：我们看到了事实吗？我们能感知非共识吗？我们的时间够用吗？接下来，我想提出第四个问题：*想抓住小趋势，我们的力量从哪里来？*甭管抓住多少小趋势，我们总得有力量去实现它。
 
 过去的200多年，我们的力量从哪里来？答案是明摆着的：靠工具，靠机器，今天靠人工智能。还有什么能比人工智能更有力量？
 
@@ -862,13 +850,13 @@ tags: [管理]
 
 我并不知道这些问题的答案，但是凭常识就能判断，如果拼多多是靠这些手段崛起的，那轮不到它。拼多多能够长成这么一个庞然大物，而且还在主流公众的视野之外，它一定是被一个我们忽略的东西驱动着。
 
-这个东西是什么呢？黄峥，也就是拼多多的创始人，他自己是这么说的：“拼多多是人的逻辑。”
+这个东西是什么呢？黄峥，也就是拼多多的创始人，他自己是这么说的：*“拼多多是人的逻辑。”*
 
 什么意思呢？所谓人的逻辑就是，李大妈看见一个东西很喜欢，她就想，赵大妈跟我情况差不多，肯定也需要，我俩一起买还便宜5块钱，所以就说服赵大妈跟自己拼起来。赵大妈也是这么说服张大妈的，就这样人越滚越多。这就是拼多多最底层的商业逻辑。
 
 你会说，这一点不神奇啊？那我们回到李大妈说服赵大妈的那个时刻，她凭什么能说服赵大妈呢？看起来凭的是便宜几块钱，但实际上凭的是两家当邻居已经两代了，孙子在一起上幼儿园，俩人一起跳广场舞，还一起旅过游、买过菜，上次李大妈推荐的纱巾也不错……
 
-赵大妈对于李大妈的信任，是说不清楚的，是数据暂时还计算不了的，但是李大妈说什么，赵大妈都信，而且直接信。这种信任是什么？是一种人对人非常直接的感知和判断。这个感知和判断，胜过千万条数据。
+赵大妈对于李大妈的信任，是说不清楚的，是数据暂时还计算不了的，但是李大妈说什么，赵大妈都信，而且直接信。*这种信任是什么？是一种人对人非常直接的感知和判断。这个感知和判断，胜过千万条数据。*
 
 慢着，我们好像抓到了一个新东西，我们在这里停一下，不要让它跑掉。怎么好像我们身上还有一样东西很厉害？对，就是我们对另外一个人的感知和判断能力。这个东西好厉害，厉害到可以驱动一个庞大的、现象级的商业公司。
 
@@ -882,14 +870,13 @@ tags: [管理]
 
 你看，一个真实的人的真实反应，恰恰是我们最值得信赖的指标。
 
-这是2018年，我摸索出来的方法，我把它称之为“用人的体验丈量世界”。
+这是2018年，我摸索出来的方法，我把它称之为*“用人的体验丈量世界”*。
 
 你看，我们一方面相信，人工智能会是无比聪明和强大的工具。但是另一方面，别忘了我们自己身上藏着的感知能力，那份良知良能是大自然几十亿年进化出来的极其灵敏的工具。这玩意好用得不得了，它一直都在。
 
+## 2
 
-2
-
-这个工具只能感知这个世界吗？不是。它更大的妙用是，人和人的感知一旦叠加，会形成一股漩涡般强大的力量，不断地卷入更多的人、更多的外部资源，推动一个东西飞速旋转，我称它为“信用飞轮”。 
+这个工具只能感知这个世界吗？不是。它更大的妙用是，人和人的感知一旦叠加，会形成一股漩涡般强大的力量，不断地卷入更多的人、更多的外部资源，推动一个东西飞速旋转，我称它为*“信用飞轮”*。
 
 它能创造有别于机器、工具、人工智能这些力量之外的另外一种力量，今天的很多好企业都是被这种力量驱动着的，但是这种力量和它背后的逻辑却经常被忽视。
 
@@ -957,12 +944,11 @@ tags: [管理]
 
 我们在场的大部分人，肯定不是十一学校的校友，但是只要我这么一转述，你就能感受到这个信用飞轮的力量。没准将来哪一天的茶余饭后，你也会把这个故事讲给别人。你看，你也参与到了对十一学校这个信用飞轮的推动中。
 
-我今天讲这个信用飞轮的逻辑，只想证明一点：这个世界绝不会只变成机器的世界、算法的世界、代码的世界。这个世界在很多场景下，完全呈现为一个人推动人的世界。
+我今天讲这个信用飞轮的逻辑，只想证明一点：*这个世界绝不会只变成机器的世界、算法的世界、代码的世界。这个世界在很多场景下，完全呈现为一个人推动人的世界。*
 
 杨勇加入了一个信用飞轮，李希贵启动了一个信用飞轮，我接下来给你讲第三个故事。
 
-
-3
+## 3
 
 几年前，有一个小伙子，他来到了杨勇工作的那个片区，他也刚开始一份新的工作，他也想启动一个自己的信用飞轮。他想干一个App，就是「得到」。 
 
@@ -970,7 +956,7 @@ tags: [管理]
 
 那是笔什么账呢？就是算清楚我们有多少用户。你可能会说：这还用算？你们不是有数据统计吗？你怎么可能连自己有多少用户都不知道呢？是，按照数据统计，我们今天有2600万用户。但我们得问问，这就是我们的用户吗？坦白地说，其中很大一部分，都只是下载过「得到」，被数据记录在案而已，一年都未必用一次这个App。我没有那么狂妄，我不敢恬着脸说，我拥有2600万用户。
 
-那我怎么算我的用户数量呢？刚才我们讲的信用飞轮那套逻辑，教会了我怎么算。我只看一个数据：就拿今年来说，有240万人把得到App里的内容转发给了他的朋友。这240万人，把得到的内容转发了3500万次。什么叫转发？就是用他们的判断，背书了我们对内容的判断；用他们的信用，推动了我们的信用。这就是我刚才讲的，信用飞轮人推人。这里面没有算法的事，没有人工智能的事。
+那我怎么算我的用户数量呢？刚才我们讲的信用飞轮那套逻辑，教会了我怎么算。我只看一个数据：就拿今年来说，有240万人把得到App里的内容转发给了他的朋友。这240万人，把得到的内容转发了3500万次。什么叫转发？就是*用他们的判断，背书了我们对内容的判断；用他们的信用，推动了我们的信用。*这就是我刚才讲的，信用飞轮人推人。这里面没有算法的事，没有人工智能的事。
 
 就这么多人，这240万兄弟姐妹，你们是我们的用户。感谢你们！2018年，很多人喊流量焦虑，我是完全没有的。看着240万和2600万之间的差距，我的内心就很乐观，工作努力空间还很大。
 
@@ -988,13 +974,14 @@ tags: [管理]
 
 你们不用点掌声祝福我早日看到这一天么？
 
-气氛都烘到这了，一年一度的朋友圈大型信用验证现场，必须开始了。亲用户们，不管你在现场，还是在屏幕之前，拿出你的手机，点开你的相机，准备好了吗？屏幕上这张图片，求拍照，求转发。转发的时候，请带上三个字——“我相信”。 
+气氛都烘到这了，一年一度的朋友圈大型信用验证现场，必须开始了。亲用户们，不管你在现场，还是在屏幕之前，拿出你的手机，点开你的相机，准备好了吗？屏幕上这张图片，求拍照，求转发。转发的时候，请带上三个字——*“我相信”*。
 
 之所以请求您带上“我相信”这三个字，是因为这还不是我们的现状。但是，你现在做的每一次转发，都是在监督我们，督促我们无限接近这个目标。
 
 
 # 第七部分：时间愿意和我做朋友吗？
-1
+
+## 1
 
 关于小趋势，前面我们讨论了第四个问题：我的力量从哪里来呢？我们知道，用人的体验丈量世界，启动你的信用飞轮，你就会有力量。
 
@@ -1012,16 +999,17 @@ tags: [管理]
 
 那段时间，我看见他就问，还和抖音较劲呢？他说：“对，我正在驯化它。”
 
-你发现了吗？只要你能足够地强大，跳出时间给你设置的陷阱，你就能成为时间的朋友。这位同事还告诉我一点，如果你三天不打开抖音，再打开，美女、段子就会再次偷偷跑进来，你只能从头开始。你看，这个驯化抖音的例子告诉我们，要持续地、长期地守住目标。这种行为模式，叫作“长期主义”。只有长期主义者，才能成为时间的朋友。 
+你发现了吗？*只要你能足够地强大，跳出时间给你设置的陷阱，你就能成为时间的朋友。*这位同事还告诉我一点，如果你三天不打开抖音，再打开，美女、段子就会再次偷偷跑进来，你只能从头开始。你看，这个驯化抖音的例子告诉我们，要持续地、长期地守住目标。这种行为模式，叫作*“长期主义”*。只有长期主义者，才能成为时间的朋友。 
+
+![](/uploads/2019/01/02-14.jpg)
 
 就像吴声提醒的：长期主义不仅要坚持你想做的事情，而且不能中断你在做的事情，还要持续地不被诱惑。一旦中断，前功尽弃。
 
 小趋势的信号即使再微弱，只要一旦被识别出来，长期主义就能把它放大。
 
-任何一个人，不管你的力量强弱，放眼于足够长的时间，你都可以通过长期主义这种行为模式，成为时间的朋友。
+*任何一个人，不管你的力量强弱，放眼于足够长的时间，你都可以通过长期主义这种行为模式，成为时间的朋友。*
 
-
-2
+## 2
 
 我知道你心中可能有一个疑问，不是说“时间会磨损一切”吗？时间怎么可能成为一个信号的放大器呢？
 
@@ -1037,12 +1025,11 @@ tags: [管理]
 
 当我们说莫高窟是中华艺术瑰宝的时候，你不觉得奇怪吗？莫高窟那些传世作品的创造者，其实只是普通的工匠。他们画的每一笔，他们刻的每一刀，本来是要被湮没的呀。如果不汇入这条长期主义的大河，所有的努力都会随风而逝。而现在，虽然工匠们的名字没有留下来，但他们活着时候的努力，成了中华艺术瑰宝，他们也成了中华艺术瑰宝的创作者。
 
-所谓的伟大，有时候就是这么回事。普通人的努力，在长期主义的复利下，会积累成奇迹。时间帮助了他们，他们成为了时间的朋友。 
-
+所谓的伟大，有时候就是这么回事。*普通人的努力，在长期主义的复利下，会积累成奇迹。时间帮助了他们，他们成为了时间的朋友。*
 
 说到这里你可能还是觉得抽象，这和我的人生有什么关系？什么一千年一万年？能不能教我一个短平快就能见效，但又符合长期主义精神的方法？
 
-还真有，哪怕时间短到一个月，你也可以运用长期主义的策略，达成自己的目标。你信不信？一千年有一千年的干法，一个月有一个月的干法。
+还真有，哪怕时间短到一个月，你也可以运用长期主义的策略，达成自己的目标。你信不信？*一千年有一千年的干法，一个月有一个月的干法。*
 
 给你分享个真事：我有一个前同事，和他们办公室的一个女孩处于关系的暧昧期，双方都处在互相试探的阶段。有一次男孩出差，回来之后就跟女孩说：“我知道你喜欢哈利·波特，出差给你带了一个小礼物，看到后随手给你买的。”女孩没啥心理负担，就笑纳了。
 
@@ -1050,12 +1037,11 @@ tags: [管理]
 
 体会一下，这个时候女孩心里被撩动的程度。一次性送个很贵的礼物，希望出手快、效率高，谁都会，但这未必能打动一个好女孩。但是，挺便宜的小礼物，很用心地分几次连续送出去，把时间这个变量加进来，把长期主义这个算法加进去，你会发现，它的力量是不一样的。
 
-在去年的跨年演讲上，我跟大家介绍了一个人生算法的公式：一个人的成就，来自一套核心算法乘以大量重复动作的平方。这其实就是长期主义的原则，做一件事，长期地去做，持续地去做。你看，无论是这为期一个月的生活插曲，还是我们准备持续20年的跨年演讲，一直到修筑1600年的莫高窟，再到设计寿命一万年的钟，是不是都符合这个算法的公式？
+在去年的跨年演讲上，我跟大家介绍了一个人生算法的公式：*一个人的成就，来自一套核心算法乘以大量重复动作的平方。*这其实就是长期主义的原则，做一件事，长期地去做，持续地去做。你看，无论是这为期一个月的生活插曲，还是我们准备持续20年的跨年演讲，一直到修筑1600年的莫高窟，再到设计寿命一万年的钟，是不是都符合这个算法的公式？
 
 说到这里，你就能理解接下来我要向你介绍的这件事的力量了。
 
-
-3
+## 3
 
 距离2019年，越来越近了。我们的跨年演讲本身就是一件长期主义的事，而今年，我们要再加上一件长期主义的事：每年跨年之际，我们都将会全球首发一个我们心目中的年度最重要的知识产品。而今年，我们要首发的这个产品，它本身就是在印证长期主义。
 
@@ -1067,13 +1053,13 @@ tags: [管理]
 
 在长期主义这个放大器里，个体的努力都堆成了奇迹。历史上无一例外，只要是长期主义，不管是司马迁，还是莫高窟，都会成为奇迹。何帆做这件事，肯定不例外，他也一定会成。 
 
-你看，虽然这个世界充满了不确定性，但是你可以用自己的超级确定性，来对冲外界的不确定。
+你看，*虽然这个世界充满了不确定性，但是你可以用自己的超级确定性，来对冲外界的不确定。*
 
 这个世界到处充满了算法，算法每时每刻都在试探你、判断你、诱惑你、套路你。这个世界好像很危险。为什么算法很危险呢？因为算法是一个整体，我们作为一个人，被算法解体了，变成了碎片化的数据。
 
 作为个体，我们貌似无力反抗。但是，我们手里还扣着一张王牌。我们为什么命中注定只能被碾压为碎片，只能成为被利用的数据呢？我们为什么不能反过来，成为一个整体性的算法，来整合外部世界呢？我们也可以是算法，外部世界也可以是数据。
 
-就像吴伯凡老师发出的那个灵魂拷问：这个世界其实正在发生一场博弈。你是数据？还是算法？
+就像吴伯凡老师发出的那个灵魂拷问：*这个世界其实正在发生一场博弈。你是数据？还是算法？*
 
 我们每个人其实都有得选。只要我们是一个长期主义者，我们就有机会反败为胜，我们就有机会把自己变成算法。世界是丰盛的资源，还是恶意的陷阱，取决于你是否坚持长期主义。
 
@@ -1121,7 +1107,8 @@ tags: [管理]
 
 
 # 第八部分：尾声
-1
+
+## 1
 
 2019年还是来了。天高地广，世界又是一个新的样子。不管2018年我们过得怎样，我们都有机会重来，也必须重来。
 
@@ -1129,7 +1116,7 @@ tags: [管理]
 
 对留守儿童，你的印象可能是，这是中国社会最无助的一个人群，他们家境贫困、教育资源很少，甚至还得不到父母日常的陪伴和照顾。总之，一想起留守儿童，我们总会觉得这是一群前途渺茫的孩子。
 
-但是，2018年，何帆探访了一个山区小学。规模非常小，一共只有28名幼儿园孩子、43名小学生和12位老师。何帆老师在那里看到了什么呢？跟我们坐在大城市里面的想象完全相反——山区、留守儿童，并不是一个悲惨世界。何帆得出一个连他自己都震惊的结论：所有最先锋的教育理念，在这所山区小学都能看到。不可思议吧？
+但是，2018年，何帆探访了一个山区小学。规模非常小，一共只有28名幼儿园孩子、43名小学生和12位老师。何帆老师在那里看到了什么呢？跟我们坐在大城市里面的想象完全相反——山区、留守儿童，并不是一个悲惨世界。何帆得出一个连他自己都震惊的结论：*所有最先锋的教育理念，在这所山区小学都能看到。*不可思议吧？
 
 我们来看看，发生了什么。
 
@@ -1157,12 +1144,11 @@ tags: [管理]
 
 再退一步讲，当变化发生的时候，你说我们做事的人有得选吗？摆在我面前的只有两种选择：一种是害怕，然后就不做事；第二种是窃喜，发生变化的时候有人害怕了，我做事的机会就来了。你说我选什么？
 
-何帆在《变量》这本书里提醒我们，历史一直奔涌不息，但它有时候是一个反转大师。反转大师提供的机会，你不能辜负。 
+何帆在《变量》这本书里提醒我们，*历史一直奔涌不息，但它有时候是一个反转大师。反转大师提供的机会，你不能辜负。*
 
 我们再看一眼这所学校，它叫范家小学，它的位置在四川省广元市利州区宝轮镇苟村一组。这样的地方，在中国大地上到处都是。等你拿到《变量》这本书，关于这个故事你能看到更多细节。
 
-
-2
+## 2
 
 我并不是说，所有的边缘地带都如此美好。但是在这个故事中你会读到，在中华文明中，确实有一个现象，就是无论在多么边缘的地方，都生长着一种向上的力量。即使在一个山村里，一个不认识字的老奶奶，摸着小孩子的头，她也一定会说，“娃呀，好好学习，有出息，将来考大学、挣大钱，孝敬你爸妈”。
 
@@ -1172,21 +1158,21 @@ tags: [管理]
 
 感谢你坚持到现在，夜已经深了。2019年的第一束曙光就快打过来了。新的一年里，什么都可能会变。但有一件事肯定不会变了，我们一生都不会变了——2018-2019的跨年之夜，是我们这些人在一起度过的。那我再来清点一下，在过去的4个小时里，我们一起收获了什么？ 
 
-三个字：小趋势。
+*三个字：小趋势。*
 
 小趋势是什么？是影响趋势的趋势，带来改变的改变。小趋势没法跟，也不用跟。只需要我们随时感知它，然后激发那些你早已准备好的力量。
 
 怎么准备呢？刚才我们提的所谓扎心五问，就是做准备的几个方向：
 
-抓住小趋势，首先总得了解事实真相；
+*抓住小趋势，首先总得了解事实真相；*
 
-抓住小趋势，你要能挣脱观念枷锁；
+*抓住小趋势，你要能挣脱观念枷锁；*
 
-抓住小趋势，你得重新定位生命的坐标；
+*抓住小趋势，你得重新定位生命的坐标；*
 
-抓住小趋势，你得学会从人的身上汲取力量；
+*抓住小趋势，你得学会从人的身上汲取力量；*
 
-抓住小趋势，你还得有一套长期主义的人生算法。
+*抓住小趋势，你还得有一套长期主义的人生算法。*
 
 有了这五条，小趋势来的时候，你就会把自己像一粒子弹一样，发射出去。
 
@@ -1200,11 +1186,11 @@ tags: [管理]
 
 今年的跨年演讲我们问，2018怎么看？
 
-就像约翰·列侬说的：“所有事到最后都会是好事。如果还不是，那它还没到最后。”
+就像约翰·列侬说的：*“所有事到最后都会是好事。如果还不是，那它还没到最后。”*
 
 那么，2019怎么办呢？
 
-就像作家阿尔贝·加缪说的：“对未来最大的慷慨，是把一切献给现在。”
+就像作家阿尔贝·加缪说的：*“对未来最大的慷慨，是把一切献给现在。”*
 
 最后，让我们郑重地对我们的合作伙伴表示感谢：
 
@@ -1217,3 +1203,5 @@ tags: [管理]
 联合特约：中信银行、好慷在家、启信宝、VOSS
 
 各位伙伴，感谢有你！
+
+![](/uploads/2019/01/02-15.jpg)
