--- a/_posts/2018-12-24-328-k8s.md
+++ b/_posts/2018-12-24-328-k8s.md
@@ -106,6 +106,11 @@ kubectl create -f registry-with-volume.yaml
 kubectl get node
 kubectl get node 172.17.116.249 -o json | jq
 
+iptables -P INPUT ACCEPT
+iptables -P FORWARD ACCEPT
+iptables -F
+iptables -L -n
+
 kubectl exec -it kube-registry-proxy-lnthx -n core sh
 ping kube-dns.cluster.local
 
@@ -122,7 +127,6 @@ curl http://localhost:5000/v2/_catalog
 kubectl log 
 
 http://16.187.191.76:8080/api/v1/namespaces/core/services/https:kubernetes-dashboard:/proxy
-
 
 http://16.187.191.76:8080/api/v1/namespaces/kube-system/services/https:kubernetes-dashboard:/proxy/
 
