--- a/_posts/2019-01-03-333-docker.md
+++ b/_posts/2019-01-03-333-docker.md
@@ -30,6 +30,32 @@ docker build -t php:5.6-fpm .
 docker rmi 3c6963d39c34
 ```
 
+/etc/docker/daemon.json
+
+```conf
+{
+    "registry-mirrors": [
+        "加速地址"
+    ],
+    "insecure-registries": []
+}
+```
+
+以下是国内加速地址
+
+Docker中国区官方镜像(http://www.docker-cn.com/registry-mirror)
+
+https://registry.docker-cn.com
+
+网易
+
+http://hub-mirror.c.163.com
+
+ustc
+
+https://docker.mirrors.ustc.edu.cn
+
+
 # 参考
 
 [带你从零了解Docker](https://mp.weixin.qq.com/s/U25LS34tlAe3pJJWr76oZQ)
