--- a/_posts/2019-01-07-334-network.md
+++ b/_posts/2019-01-07-334-network.md
@@ -7,6 +7,7 @@ tags: [docker]
 
 # Bridge 模式
 
+```shell
 docker run -d -p 5000:5000 registry
 docker pull hello-world
 docker tag fce289e99eb9 localhost:5000/hello-world:v1
@@ -14,15 +15,20 @@ docker push localhost:5000/hello-world:v1
 docker rmi localhost:5000/hello-world:v1
 docker pull localhost:5000/hello-world:v1
 docker run -it localhost:5000/hello-world:v1
+```
 
 # Host 模式
 
+```shell
 docker run --net=host -d registry
+```
 
 # Container 模式
 
+```shell
 docker run --name registry1 -p 5000:5000 registry
 docker run --name busybox -d --net=container:registry1 busybox:latest
+```
 
 # None 模式
 
