--- a/_posts/2019-01-09-335-demo.md
+++ b/_posts/2019-01-09-335-demo.md
@@ -91,7 +91,7 @@ var server = app.listen(3000, function() {
 
 # 参考
 
-[Docker — 从入门到实践](https://github.com/yeasy/docker_practice/)
-[Docker —— 從入門到實踐](https://philipzheng.gitbooks.io/docker_practice/content/)
-[Kubernetes 30天學習筆記](https://github.com/zxcvbnius/k8s-30-day-sharing)
++ [Docker — 从入门到实践](https://github.com/yeasy/docker_practice/)
++ [Docker —— 從入門到實踐](https://philipzheng.gitbooks.io/docker_practice/content/)
++ [Kubernetes 30天學習筆記](https://github.com/zxcvbnius/k8s-30-day-sharing)
 
