--- a/_posts/2019-01-10-336-pod.md
+++ b/_posts/2019-01-10-336-pod.md
@@ -72,3 +72,10 @@ kubectl port-forward <pod> <external-port>:<pod-port>
 kubectl label pods <pod> <label-key>=<label-value>
 kubectl get pods --show-labels
 ```
+
+
+# 参考
+
++ [Docker — 从入门到实践](https://github.com/yeasy/docker_practice/)
++ [Docker —— 從入門到實踐](https://philipzheng.gitbooks.io/docker_practice/content/)
++ [Kubernetes 30天學習筆記](https://github.com/zxcvbnius/k8s-30-day-sharing)
