--- a/_posts/2019-01-11-340-labels.md
+++ b/_posts/2019-01-11-340-labels.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Labelsç¤ºä¾‹
+title: LabelsÊ¾Àı
 pid: 340
 tags: [docker, k8s]
 ---
@@ -62,8 +62,8 @@ kubectl get pods
 kubectl describe pod my-pod
 ```
 
-# å‚è€ƒ
+# ²Î¿¼
 
-+ [Docker â€” ä»å…¥é—¨åˆ°å®è·µ](https://github.com/yeasy/docker_practice/)
-+ [Docker â€”â€” å¾å…¥é–€åˆ°å¯¦è¸](https://philipzheng.gitbooks.io/docker_practice/content/)
-+ [Kubernetes 30å¤©å­¸ç¿’ç­†è¨˜](https://github.com/zxcvbnius/k8s-30-day-sharing)
++ [Docker ¡ª ´ÓÈëÃÅµ½Êµ¼ù](https://github.com/yeasy/docker_practice/)
++ [Docker ¡ª¡ª ÄÈëéTµ½ŒÛ`](https://philipzheng.gitbooks.io/docker_practice/content/)
++ [Kubernetes 30ÌìŒWÁ•¹PÓ›](https://github.com/zxcvbnius/k8s-30-day-sharing)
