--- a/_posts/2019-01-11-340-labels.md
+++ b/_posts/2019-01-11-340-labels.md
@@ -11,13 +11,13 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: my-pod
-  lables:
+  labels:
     app: webserver
-	tier: backend
+    tier: backend
   annotations:
     version: latest
-	release_date: 2017/12/28
-	contact: baoguo.ding@foxmail.com
+    release_date: 2017/12/28
+    contact: baoguo.ding@foxmail.com
 spec:
   containers:
   - name: pod-demo
@@ -26,10 +26,11 @@ spec:
     - containerPort: 3000
 
 kubectl create -f my-pod.yaml
-kubectl get pods --show-lables
+kubectl get pod --show-labels
 kubectl describe pod my-pod
 kubectl label pod my-pod env=production
 kubectl get pods --show-labels
+kubectl edit pod my-pod
 
 ---
 kubectl get nodes --show-lables
@@ -39,13 +40,13 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: my-pod
-  lables:
+  labels:
     app: webserver
-	tier: backend
+    tier: backend
   annotations:
     version: latest
-	release_date: 2017/12/28
-	contact: baoguo.ding@foxmail.com
+    release_date: 2017/12/28
+    contact: baoguo.ding@foxmail.com
 spec:
   containers:
   - name: pod-demo
