--- a/_posts/2019-01-11-341-hc.md
+++ b/_posts/2019-01-11-341-hc.md
@@ -15,32 +15,31 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-	  app: my-deployment
+      app: my-deployment
   template:
     metadata:
-	  labels:
-	    app: my-deployment
-	spec:
-	  containers:
-	  - name: webapp
-	    image: baoguoding/demo
-		ports:
-		- name: webapp-port
-		  containerPort: 3000
-		livenessProbe:
-		  httpGet:
-		    path: /
-			port: webapp-port
-		  initialDelaySeconds: 15
-		  periodSeconds: 15
-		  timeoutSeconds: 30
-		  successThreshold: 1
-		  failureThreshold: 3
-
+      labels:
+        app: my-deployment
+    spec:
+      containers:
+      - name: webapp
+        image: baoguoding/demo
+        ports:
+        - name: webapp-port
+          containerPort: 3000
+        livenessProbe:
+          httpGet:
+            path: /
+            port: webapp-port
+          initialDelaySeconds: 15
+          periodSeconds: 15
+          timeoutSeconds: 30
+          successThreshold: 1
+          failureThreshold: 3
 
 kubectl create -f my-deployment-with-health-checks.yaml
 kubectl get deploy
-kubectl describe pod <pod-name>
+kubectl describe deploy hello-deployment
 ```
 
 
