--- a/_posts/2019-01-11-342-secret.md
+++ b/_posts/2019-01-11-342-secret.md
@@ -9,16 +9,12 @@ tags: [docker, k8s]
 echo -n "root" > username.txt
 echo -n "rootpass" > password.txt
 
-kubectl create secret generic demo-secret-from-file \
---from-file=./username.txt \
---from-file=./password.txt
+kubectl create secret generic demo-secret-from-file --from-file=./username.txt --from-file=./password.txt
 kubectl describe secrets demo-secret-from-file
 kubectl get secret
 
 ---
-kubectl create secret generic demo-secret-from-literal \
---from-literal=username=root \
---from-literal=password=rootpass
+kubectl create secret generic demo-secret-from-literal --from-literal=username=root --from-literal=password=rootpass
 kubectl describe secret demo-secret-from-literal
 
 ---
@@ -32,14 +28,15 @@ metadata:
   name: demo-secret-from-yaml
 type: Opaque
 data:
-  username: <username>
-  password: <password>
+  username: cm9vdA==
+  password: cm9vdHBhc3M=
   
 kubectl create -f my-secret.yaml
 kubectl get secrets
 
 ---
 # my-pod.yaml
+apiVersion: v1
 kind: Pod
 metadata:
   name: my-pod
@@ -49,19 +46,19 @@ spec:
   containers:
   - name: demo-pod
     image: baoguoding/demo
-	ports:
-	- containerPort: 3000
-	env:
-	- name: SECRET_USERNAME
-	  valueFrom:
-	    secretKeyRef:
-		  name: demo-secret-from-yaml
-		  key: username
+    ports:
+    - containerPort: 3000
+    env:
+    - name: SECRET_USERNAME
+      valueFrom:
+        secretKeyRef:
+          name: demo-secret-from-yaml
+          key: username
     - name: SECRET_PASSWORD
-	  valueFrom:
-	    secretKeyRef:
-		  name: demo-secret-from-yaml
-		  key: password
+      valueFrom:
+        secretKeyRef:
+          name: demo-secret-from-yaml
+          key: password
 		  
 kubectl create -f my-pod.yaml
 kubectl get pods
@@ -81,19 +78,19 @@ spec:
   containers:
   - name: demo-pod
     image: baoguoding/demo
-	ports:
-	- containerPort: 3000
-	volumeMounts:
-	- name: secret-volume
-	  mountPath: /etc/creds
-	  readOnly: true
+    ports:
+    - containerPort: 3000
+    volumeMounts:
+    - name: secret-volume
+      mountPath: /etc/creds
+      readOnly: true
   volumes:
   - name: secret-volume
     secret:
-	  secretName: demo-secret-from-yaml
+      secretName: demo-secret-from-yaml
 
-kubectl create -f demo-secret-from-yaml.yaml
-kubectl exec -it demo-pod sh
+kubectl create -f my-pod-with-mounting-secret.yaml
+kubectl exec -it <pod-name> sh
 ls /etc/creds
 echo "$(cat /etc/creds/username)"
 echo "$(cat /etc/creds/password)"
