--- a/_posts/2019-01-12-343-wordpress.md
+++ b/_posts/2019-01-12-343-wordpress.md
@@ -15,25 +15,26 @@ metadata:
   name: wordpress-secret
 type: Opaque
 data:
-  # echo -n "rootpass" | base64
-  db-password: cm9vHBhc3M=
+  db-password: cm9vdHBhc3M=
+
   
 kubectl create -f wordpress-secret.yaml
 
 # my-wordpress-deploy.yaml
-apiVersion: Deployment
+apiVersion: apps/v1beta2
+kind: Deployment
 metadata:
   name: wordpress-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-	  app: wordpress-deployment
+      app: wordpress-deployment
   template:
     metadata:
-	  lables:
-	    app: wordpress-deployment
-	spec:
+      labels:
+        app: wordpress-deployment
+    spec:
       containers:
       - name: wordpress
         image: wordpress:4-php7.0
@@ -44,21 +45,21 @@ spec:
         - name: WORDPRESS_DB_PASSWORD
           valueFrom:
             secretKeyRef:
-			  name: wordpress-secret
-			  key: db-password
-		- name: WORDPRESS_DB_HOST
-		  value: 127.0.0.1
+              name: wordpress-secret
+              key: db-password
+        - name: WORDPRESS_DB_HOST
+          value: 127.0.0.1
       - name: mysql
         image: mysql:5.7
-		ports:
-		- name: mysql-port
-		  containerPort: 3306
-		env:
-		- name: MYSQL_ROOT_PASSWORD
-		  valueFrom:
-		    secretKeyRef:
-			  name: wordpress-secret
-			  key: db-password
+        ports:
+        - name: mysql-port
+          containerPort: 3306
+        env:
+        - name: MYSQL_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: wordpress-secret
+              key: db-password
 
 kubectl create -f my-wordpress-deploy.yaml
 			  
