--- a/_posts/2019-01-12-345-dns.md
+++ b/_posts/2019-01-12-345-dns.md
@@ -53,7 +53,7 @@ kubectl get pods
 
 ---
 # mysql-server-service.yaml
-apiVersion:
+apiVersion: v1
 kind: Service
 metadata:
   name: mysql-server-service
