--- a/_posts/2019-01-12-344-dashboard.md
+++ b/_posts/2019-01-12-344-dashboard.md
@@ -6,15 +6,17 @@ tags: [docker, k8s]
 ---
 
 ```demo
-kubectl apply -f https://raw.githubusercontent.com/\
-kubernetes/dashboard/master/src/deploy/recommended/\
-kubernetes-dashboard.yaml
+kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/master/src/deploy/recommended/kubernetes-dashboard.yaml
+kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v1.8.1/src/deploy/recommended/kubernetes-dashboard.yaml
 kubectl proxy
 kubectl proxy --address='0.0.0.0' --port=8002 --accept-hosts='^*$'
 
 http://127.0.0.1:8001/api/v1/namespaces/kube-system/services/kubernetes-dashboard/proxy/#!/overview?namespace=default
 http://<IP-ADDR>:<PORT>/#!/overview?namespace=default
 ```
+
+有待更多的实践，然后，再来整理！
+
 
 # 参考
 
